added jquery to layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,6 @@
 	<div>
 		<%= body %>
 	</div>
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="/web/jquery.min.js"></script>
 </body>
 </html>
