--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-   	<title>Metanode<%= title ? ' - ' + title : '' %></title>
-   	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   	<meta name="title" content="Metanode" />
-	<meta name="language" content="en" />
-	<meta name="robots" content="index, follow" />
-   	<link rel="shortcut icon" href="" />
-   	<link rel="stylesheet" type="text/css" media="screen" href="" />
-	<script type="text/javascript" src="/web/jquery.min.js"></script>
-</head>
-<body>
-	<h1>Metanode</h1>
-	<%= partial('menu') %>
-	<div>
-		<%= body %>
-	</div>
-</body>
-</html>
+!!! 5
+html
+  head
+    title
+      | Metanode
+      = title ? ' - ' + title : ''
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="title" content="Metanode" />
+    <meta name="language" content="en" />
+    <meta name="robots" content="index, follow" />
+    <link rel="shortcut icon" href="" />
+    <link rel="stylesheet" type="text/css" media="screen" href="" />
+    <script type="text/javascript" src="/web/jquery.min.js"></script>
+  body
+    - var index = url('index')
+    a(href: index)
+      h1 Metanode
+    != partial('menu')
+    div!= body
